...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
...
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/edit_text_title" />

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="365dp"
                android:layout_height="44dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                app:layout_constraintVertical_bias="0.0" />

            <RatingBar
                android:id="@+id/ratingBarPriority"
                android:layout_width="240dp"
                android:layout_height="42dp"
                android:layout_marginStart="152dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                app:layout_constraintStart_toStartOf="parent"
...
