...
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="@dimen/_40sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/textMiscellaneous"
        android:gravity="center"
        android:text="Other Fucntions"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        />
    <LinearLayout
...
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"/>
            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="@dimen/_35sdp"
...
