<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".activity.MasterActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toTopOf="@id/viewCenterOfNext"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/indicatorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSkip"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="Skip"
        android:textColor="@color/primary_c"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/icon_outer_background"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext"
        app:layout_constraintStart_toStartOf="@id/imageNext"/>

    <View
        android:id="@+id/viewCenterOfNext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintStart_toStartOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/imageNext"
        android:layout_marginBottom="20dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toTopOf="@id/buttonGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/background_c"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/buttonGetStarted"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="Get Started"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:backgroundTint="@color/primary_c"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>